[package]
name = "edgerouter-exporter"
description = "Prometheus exporter for EdgeRouter metrics"
version = "2.9.3"
edition = "2021"
authors = ["Chitoku <odango@chitoku.jp>"]
license = "MIT"

[package.metadata.deb]
name = "prometheus-edgerouter-exporter"
depends = ["libc6 (>= 2.23)", "libgcc1", "libssl1.1"]
assets = [["target/release/edgerouter-exporter", "usr/bin/", "755"]]
maintainer-scripts = "debian/"
extended-description = """
This server reads statistics from EdgeOS and exports them via HTTP or HTTPS for
consumption by Prometheus.
"""

[package.metadata.deb.systemd-units]
unit-name = "prometheus-edgerouter-exporter"
enable = false
start = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[features]
default = ["tls"]
tls = ["tls-listener/hyper-h1", "tls-listener/hyper-h2", "tls-listener/openssl"]

[dependencies.anyhow]
version = "1.0.82"

[dependencies.atomic-shim]
version = "0.2.0"

[dependencies.axum]
version = "0.7.5"
features = ["http1", "http2", "tokio"]
default-features = false

[dependencies.chrono]
version = "0.4.37"
features = ["clock", "std"]
default-features = false

[dependencies.clap]
version = "4.5.4"
features = ["cargo", "derive", "env", "help", "std", "string", "suggestions", "usage"]
default-features = false

[dependencies.derive_more]
version = "0.99.0"

[dependencies.env_logger]
version = "0.11.3"

[dependencies.futures]
version = "0.3.30"

[dependencies.hyper]
version = "1.1.0"
features = ["server"]

[dependencies.hyper-util]
version = "0.1.3"
features = ["tokio"]

[dependencies.indenter]
version = "0.3.3"

[dependencies.indexmap]
version = "2.2.6"
features = ["serde"]

[dependencies.log]
version = "0.4.21"

[dependencies.nom]
version = "7.1.3"

[dependencies.notify]
version = "6.1.1"
default-features = false

[dependencies.number_prefix]
version = "0.4.0"

[dependencies.openssl]
version = "0.10.64"

[dependencies.prometheus-client]
version = "0.22.2"

[dependencies.rsvici]
version = "0.1.1"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tls-listener]
version = "0.8.0"

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "net", "process", "rt-multi-thread"]

[dependencies.tower-service]
version = "0.3.2"

[dev-dependencies.indoc]
version = "2.0.5"

[dev-dependencies.mockall]
version = "0.12.1"

[dev-dependencies.pretty_assertions]
version = "1.4.0"
