[package]
name = "edgerouter-exporter"
description = "Prometheus exporter for EdgeRouter metrics"
version = "2.9.4"
edition = "2021"
authors = ["Chitoku <odango@chitoku.jp>"]
license = "MIT"

[package.metadata.deb]
name = "prometheus-edgerouter-exporter"
depends = ["libc6 (>= 2.23)", "libgcc1", "libssl1.1"]
assets = [["target/release/edgerouter-exporter", "usr/bin/", "755"]]
maintainer-scripts = "debian/"
extended-description = """
This server reads statistics from EdgeOS and exports them via HTTP or HTTPS for
consumption by Prometheus.
"""

[package.metadata.deb.systemd-units]
unit-name = "prometheus-edgerouter-exporter"
enable = false
start = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[features]
default = ["tls"]
tls = ["tls-listener/openssl"]

[dependencies.anyhow]
version = "1.0.101"

[dependencies.atomic-shim]
version = "0.2.0"

[dependencies.axum]
version = "0.8.8"
features = ["http1", "http2", "tokio"]
default-features = false

[dependencies.chrono]
version = "0.4.43"
features = ["clock", "std"]
default-features = false

[dependencies.clap]
version = "4.5.56"
features = ["cargo", "derive", "env", "help", "std", "string", "suggestions", "usage"]
default-features = false

[dependencies.derive_more]
version = "2.1.1"
features = ["as_ref", "constructor", "deref", "deref_mut", "display", "from", "from_str", "into", "into_iterator"]

[dependencies.env_logger]
version = "0.11.8"

[dependencies.futures]
version = "0.3.31"

[dependencies.hyper]
version = "1.8.1"
features = ["server"]

[dependencies.hyper-util]
version = "0.1.19"
features = ["tokio"]

[dependencies.indenter]
version = "0.3.4"

[dependencies.indexmap]
version = "2.13.0"
features = ["serde"]

[dependencies.log]
version = "0.4.29"

[dependencies.nom]
version = "8.0.0"

[dependencies.notify]
version = "8.2.0"
default-features = false

[dependencies.number_prefix]
version = "0.4.0"

[dependencies.openssl]
version = "0.10.75"

[dependencies.prometheus-client]
version = "0.24.0"

[dependencies.rsvici]
version = "0.1.4"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tls-listener]
version = "0.11.2"

[dependencies.tokio]
version = "1.49.0"
features = ["macros", "net", "process", "rt-multi-thread"]

[dependencies.tower-service]
version = "0.3.3"

[dev-dependencies.indoc]
version = "2.0.7"

[dev-dependencies.mockall]
version = "0.14.0"

[dev-dependencies.pretty_assertions]
version = "1.4.1"
